--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="listBrac">History</string>
     <string name="history_heading">你的酒測記錄</string>
     <string name="no_history">No history. You have not done any tests yet.</string>
     <string name="empty_row">Row is empty</string>
-    
     <string name="hello">Hello, IOIO User!</string>
     <string name="app_name">Hello IOIO</string>
     <string name="led2">Button led 2</string>
     <string name="led4">Button led 4</string>
     <string name="storage_state">External storage state:</string>
-    
     <string name="row_value">Row value: </string>
     <string name="voltage">Voltage: </string>
     <string name="brac">Breath Alcohol Concentration(mg/l): </string>
-    
     <string name="your_barc_value">你的酒測值是</string>
     <string name="unknown_value">還不知道！</string>
     <string name="desc_imageview1">用來thumbs up or down</string>
-    
     <string name="connectStatus">Sending file&#8230;</string>
-    
     <string name="enable_gps">Enable GPS</string>
     <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
     <string name="unknown">--Unknown--</string>
     <string name="waitLoc">Waiting for location&#8230;</string>
     <string name="not_support_gps">GPS provider not supported</string>
     <string name="not_support_network">Network provider not supported</string>
-    
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_game">GameActivity</string>
+
 </resources>
